Revealing Module Pattern

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           </li> -->
         </ul>
       </div>
-      <script src="script.js"></script>
+      <script src="todoModule.js"></script>
+      <script type = "text/javascript">
+        TodoListVariable.intialize();
+      </script>
     </body>
   </html>
